--- a/.env
+++ b/.env
@@ -54,14 +54,14 @@ ALLOWED_IMAGE_TYPES=image/jpeg,image/png,image/gif,image/webp,image/svg+xml
 ALLOWED_DOCUMENT_TYPES=application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,text/plain,application/rtf,text/csv
 ALLOWED_VIDEO_TYPES=video/mp4,video/avi,video/quicktime,video/x-ms-wmv,video/x-flv,video/webm,video/x-msvideo
 ALLOWED_AUDIO_TYPES=audio/mpeg,audio/mp4,audio/wav,audio/webm
-ALLOWED_OTHER_TYPES=application/x-wavefront-obj,application/x-fbx,application/x-collada,application/x-3ds,application/x-blender,application/x-stl,application/x-ply,model/obj,model/stl,model/ply
+ALLOWED_OTHER_TYPES=application/x-wavefront-obj,application/x-fbx,application/x-collada,application/x-3ds,application/x-blender,application/x-stl,application/x-ply,model/obj,model/stl,model/ply,application/zip,application/dicom
 
 # File Upload Configuration (in bytes)
 MAX_IMAGE_SIZE=10485760        # 10MB
 MAX_DOCUMENT_SIZE=52428800     # 50MB
 MAX_VIDEO_SIZE=209715200       # 200MB
 MAX_AUDIO_SIZE=52428800        # 50MB
-MAX_OTHER_SIZE=104857600       # 100MB
+MAX_OTHER_SIZE=1073741824      # 1GB (for DICOM ZIP archives)
 
 # Configure these with your own Docker registry images
 DOCKER_IMAGE_BACKEND=backend
