--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "minio<8.0.0,>=7.2.13",
     "python-magic<1.0.0,>=0.4.24",
     "pytest-asyncio>=0.23.8",
+    "pydicom>=2.4.0,<3.0.0",
 ]
 
 [tool.uv]
