--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,10 @@
     "@tanstack/react-router": "1.19.1",
     "axios": "1.7.4",
     "form-data": "4.0.0",
+    "gsap": "^3.13.0",
+    "motion": "^12.23.18",
     "next-themes": "^0.4.4",
+    "ogl": "^1.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
