--- a/inference-service/Dockerfile.cpu
+++ b/inference-service/Dockerfile.cpu
@@ -1,17 +1,43 @@
-FROM python:3.10-slim
+FROM python:3.10
 
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
-ENV PATH="/root/.cargo/bin:$PATH"
+ENV PYTHONUNBUFFERED=1
 
-WORKDIR /app
-COPY pyproject.cpu.toml pyproject.toml
-RUN uv pip install --system --no-cache .
+WORKDIR /app/
 
-COPY app ./app
-RUN mkdir -p /models
+# Install uv
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#installing-uv
+COPY --from=ghcr.io/astral-sh/uv:0.5.11 /uv /uvx /bin/
+
+# Place executables in the environment at the front of the path
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#using-the-environment
+ENV PATH="/app/.venv/bin:$PATH"
+
+# Compile bytecode
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#compiling-bytecode
+ENV UV_COMPILE_BYTECODE=1
+
+# uv Cache
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#caching
+ENV UV_LINK_MODE=copy
+
+# Install dependencies
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#intermediate-layers
+RUN --mount=type=cache,target=/root/.cache/uv \
+    --mount=type=bind,source=pyproject.cpu.toml,target=pyproject.toml \
+    --mount=type=bind,source=uv.cpu.lock,target=uv.lock \
+    uv sync --frozen --no-install-project
 
 ENV PYTHONPATH=/app
-ENV PYTHONUNBUFFERED=1
+
+COPY pyproject.cpu.toml pyproject.toml
+COPY ./app /app/app
+
+# Sync the project
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#intermediate-layers
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync
+
+# Create models directory
+RUN mkdir -p /models
 
 CMD ["celery", "-A", "app.worker", "worker", "--loglevel=info", "--concurrency=2"]
