--- a/inference-service/Dockerfile.gpu
+++ b/inference-service/Dockerfile.gpu
@@ -3,26 +3,46 @@
 # Stage 1: Builder
 FROM nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04 AS builder
 
-# Install Python and uv
+# Install Python
 RUN apt-get update && apt-get install -y \
     python3.10 \
     python3-pip \
-    curl \
-    && curl -LsSf https://astral.sh/uv/install.sh | sh \
     && rm -rf /var/lib/apt/lists/*
 
-ENV PATH="/root/.cargo/bin:$PATH"
+# Install uv
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#installing-uv
+COPY --from=ghcr.io/astral-sh/uv:0.5.11 /uv /uvx /bin/
+
+# Compile bytecode
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#compiling-bytecode
+ENV UV_COMPILE_BYTECODE=1
+
+# uv Cache
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#caching
+ENV UV_LINK_MODE=copy
 
 WORKDIR /app
 
-# Copy dependency files
-COPY pyproject.toml ./
-
 # Install dependencies
-RUN /root/.cargo/bin/uv pip install --system --no-cache -r pyproject.toml
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#intermediate-layers
+RUN --mount=type=cache,target=/root/.cache/uv \
+    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+    --mount=type=bind,source=uv.lock,target=uv.lock \
+    uv sync --frozen --no-install-project
+
+# Copy pyproject and app code
+COPY pyproject.toml ./
+COPY ./app /app/app
+
+# Sync the project
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#intermediate-layers
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync
 
 # Stage 2: Runtime
 FROM nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04
+
+ENV PYTHONUNBUFFERED=1
 
 # Install Python
 RUN apt-get update && apt-get install -y \
@@ -30,19 +50,22 @@ RUN apt-get update && apt-get install -y \
     python3-pip \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy installed packages from builder
-COPY --from=builder /usr/local/lib/python3.10 /usr/local/lib/python3.10
+# Place executables in the environment at the front of the path
+# Ref: https://docs.astral.sh/uv/guides/integration/docker/#using-the-environment
+ENV PATH="/app/.venv/bin:$PATH"
 
 WORKDIR /app
 
+# Copy the virtual environment from builder
+COPY --from=builder /app/.venv /app/.venv
+
 # Copy application code
-COPY app ./app
+COPY ./app /app/app
 
 # Create models directory
 RUN mkdir -p /models
 
 ENV PYTHONPATH=/app
-ENV PYTHONUNBUFFERED=1
 
 # Run celery worker
 CMD ["celery", "-A", "app.worker", "worker", "--loglevel=info", "--concurrency=1"]
