--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "python-magic<1.0.0,>=0.4.24",
     "pytest-asyncio>=0.23.8",
     "pydicom>=2.4.0,<3.0.0",
+    "celery[redis]>=5.3.0,<6.0.0",
 ]
 
 [tool.uv]
