--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "pytest-asyncio>=0.23.8",
     "pydicom>=2.4.0,<3.0.0",
     "celery[redis]>=5.3.0,<6.0.0",
+    "openpyxl>=3.1.0,<4.0.0",
 ]
 
 [tool.uv]
